force-app/main/default/objects/Parcours_Mapping__c/Parcours_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Utilisé par vente indirecte pour faire le mapping avec les valeurs octopus pour l&apos;estimation de la consommation</description>
    <label>Parcours Mapping</label>
</CustomObject>