force-app/main/default/objects/Parcours_Mapping__c/fields/API_Value__c.field-meta.xml
<CustomField>
    <fullName>API_Value__c</fullName>
    <label>API Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>