force-app/main/default/objects/Parcours_Mapping__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>