force-app/main/default/objects/Parcours_Mapping__c/fields/Local_Value__c.field-meta.xml
<CustomField>
    <fullName>Local_Value__c</fullName>
    <label>Local Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>